--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.github.aclijpio</groupId>
-    <artifactId>PetCare</artifactId>
+    <artifactId>AnimalCare</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>PetCare</name>
-    <description>PetCare</description>
+    <name>AnimalCare</name>
+    <description>AnimalCare</description>
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2023.0.3</spring-cloud.version>
